--- a/overlay/GmsOverlay/res/values/config.xml
+++ b/overlay/GmsOverlay/res/values/config.xml
@@ -37,4 +37,9 @@
     <!-- The names of the packages that will hold the system automotive projection role. -->
     <string name="config_systemAutomotiveProjection" translatable="false">com.google.android.projection.gearhead</string>
 
+    <!-- The component name for the default profile supervisor, which can be set as a profile owner
+    even after user setup is complete. The defined component should be used for supervision purposes
+    only. The component must be part of a system app. -->
+    <string name="config_defaultSupervisionProfileOwnerComponent" translatable="false">com.google.android.gms/.kids.account.receiver.ProfileOwnerReceiver</string>
+
 </resources>
