Add config_forceQueryablePackages overlay
As seen in GmsConfigOverlayCommon, this allows any app to query
GMS/Play Store presence.

--- a/overlay/GmsOverlay/res/values/config.xml
+++ b/overlay/GmsOverlay/res/values/config.xml
@@ -42,4 +42,14 @@
     only. The component must be part of a system app. -->
     <string name="config_defaultSupervisionProfileOwnerComponent" translatable="false">com.google.android.gms/.kids.account.receiver.ProfileOwnerReceiver</string>
 
+    <!-- The set of system packages on device that are queryable by any app regardless of the
+         contents of its manifest. -->
+    <string-array name="config_forceQueryablePackages" translatable="false">
+        <item>com.android.settings</item>
+        <item>com.android.providers.settings</item>
+        <!-- Add packages here -->
+        <item>com.android.vending</item>
+        <item>com.google.android.gms</item>
+    </string-array>
+
 </resources>
